--- a/static/scss/_notification.scss
+++ b/static/scss/_notification.scss
@@ -40,7 +40,7 @@
         color: $col-text-pri;
     }
 
-    .user-name {
+    .username {
         font-size: 13px;
         color: $col-text-sec;
         &:before {
