--- a/static/scss/_profile-full.scss
+++ b/static/scss/_profile-full.scss
@@ -89,7 +89,7 @@
             color: $col-text-pri;
         }
 
-        .user-name {
+        .username {
             font-size: 18px;
             font-weight: 200;
             color: $col-text-sec;
