--- a/static/scss/_profile-small.scss
+++ b/static/scss/_profile-small.scss
@@ -12,7 +12,7 @@
         color: $col-text-pri;
     }
 
-    .user-name {
+    .username {
         font-size: 14px;
         margin-left: 110px;
         font-weight: 200;
