--- a/static/scss/_table.scss
+++ b/static/scss/_table.scss
@@ -8,55 +8,55 @@
         position: relative;
         .row {
             width: 100%;
-            margin: 0px;
+            margin: 0;
         }
     }
 
     .width-1 {
-        width: 100px;
+        width: 1/12%;
     }
 
     .width-2 {
-        width: 200px;
+        width: 2/12%;
     }
 
     .width-3 {
-        width: 300px;
+        width: 3/12%;
     }
 
     .width-4 {
-        width: 400px;
+        width: 4/12%;
     }
 
     .width-5 {
-        width: 500px;
+        width: 5/12%;
     }
 
     .width-6 {
-        width: 600px;
+        width: 6/12%;
     }
 
     .width-7 {
-        width: 700px;
+        width: 7/12%;
     }
 
     .width-8 {
-        width: 800px;
+        width: 8/12%;
     }
 
     .width-9 {
-        width: 900px;
+        width: 9/12%;
     }
 
     .width-10 {
-        width: 1000px;
+        width: 10/12%;
     }
 
     .width-11 {
-        width: 1100px;
+        width: 11/12%;
     }
 
     .width-12 {
-        width: 1200px;
+        width: 12/12%;
     }
 }
