--- a/static/templates/card-profile-small.html
+++ b/static/templates/card-profile-small.html
@@ -10,7 +10,7 @@
                 <img class="image" src="{{ card_user.avatar.url }}" />
             </div>
             <span class="display-name">{{ card_user.display_name }}</span><br>
-            <span class="user-name">{{ card_user.user.username }}</span>
+            <span class="username">{{ card_user.user.username }}</span>
         </a>
 
         <div class="bio">{{ card_user.bio }}</div>
