--- a/static/scss/_icons.scss
+++ b/static/scss/_icons.scss
@@ -1,6 +1,6 @@
 .icon {
     display: inline-block;
-    font: normal normal normal 14px/1 FontAwesome;
+    font: normal normal normal 14px FontAwesome;
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
