--- a/static/scss/_landing.scss
+++ b/static/scss/_landing.scss
@@ -1,20 +1,6 @@
 .b-landing-container {
-    width:800px;
-    margin:0 auto;
+    min-width: 30rem;
+    width: 40vw;
+    margin: 0 auto;
     text-align: center;
-
-    .button {
-        border-radius: 5px;
-        background-color: $col-pri;
-        border-style: none;
-        padding: 10px 10px 10px 10px;
-        color: $col-background;
-        text-decoration: none !important;
-        &:hover {
-            background-color: darken($col-pri, 10%);
-        }
-        &:active {
-            background-color: darken($col-pri, 15%);
-        }
-    }
 }
