--- a/static/scss/_login.scss
+++ b/static/scss/_login.scss
@@ -1,40 +1,43 @@
 .b-header {
-    width: 800px;
+    min-width: 30rem;
+    width: 40vw;
     margin: 0 auto;
     text-align: center;
 }
 
 .b-login-container {
-    width: 800px;
+    width: 20rem;
     margin: 0 auto;
     text-align: center;
 
     .form {
         text-align: center;
         margin: 0 auto;
-        width: 600px;
+        padding: 0;
+        width: 75%;
 
         ul {
             list-style: none;
             padding: 0;
             margin: 0;
+            width: 100%;
 
             li {
-                margin: 5px;
+                margin: $margin;
 
                 label {
                     margin: 0;
                     text-align: right;
-                    width: 100px;
+                    width: 20%;
                     display: inline-block;
                     color: $col-text-pri;
                 }
 
                 input {
-                    border-radius: 5px;
-                    border: 1px solid $col-border;
+                    border-radius: $border-radius;
+                    border: $border-size $border-style $col-border;
                     padding: 5px;
-                    width: 200px;
+                    width: 70%;
                 }
             }
         }
