--- a/static/templates/profile-base.html
+++ b/static/templates/profile-base.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="info">
                         <div class="display-name">{{ target_user.display_name }}</div>
-                        <div class="user-name">{{ target_user.user.username }}</div>
+                        <div class="username">{{ target_user.user.username }}</div>
                         <div class="bio">{{ target_user.bio }}</div>
                     </div>
                 </div>
