--- a/static/templates/login.html
+++ b/static/templates/login.html
@@ -2,6 +2,7 @@
 {% load tags %}
 {% block header %}
     <title>Log in | Gabr</title>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
 {% block content %}
     <div class="b-header">
@@ -16,6 +17,9 @@
             <ul>
                 {{ form.as_ul }}
             </ul>
+            {% if captcha_required %}
+                <div class="g-recaptcha" data-sitekey="{{ site_key }}"></div>
+            {% endif %}
             <button type="submit" class="button">Log in</button>
         </form>
         <a class="signup-link" href="{% url "signup" %}">Need an account? Sign up here.</a>
