--- a/static/templates/feed.html
+++ b/static/templates/feed.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="row">
-                <a class="feed-special-link" href="/">
+                <a class="feed-action-button" href="/">
                     <div id="view-new-posts" class="b-view-new-posts hidden">
                         <div class="body">
                             <p>View x new posts</p>
@@ -51,7 +51,7 @@
             <div id="posts">
             </div>
             <div class="row">
-                <a class="feed-special-link" onclick="loadOlderPosts('feed', '')">
+                <a class="feed-action-button" onclick="loadOlderPosts('feed', '')">
                     <div id="load-more-posts" class="b-load-more-posts">
                         <div class="body">
                             <p>Load more</p>
