--- a/static/templates/notifications.html
+++ b/static/templates/notifications.html
@@ -41,7 +41,7 @@
                                     </script>
                                     <span class="text">messaged you</span>
                                     <span class="time">{{ notif.time }}</span>
-                                    <p class="text">{{ notif.message.body }}</p>
+                                    <p class="message text">{{ notif.message.body }}</p>
                                 </div>
                             {% elif notif.notification_type == "l" %}
                                 <div class="body">
