--- a/static/scss/_icons.scss
+++ b/static/scss/_icons.scss
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'FontAwesome';
+    src: url('../fonts/fontawesome-webfont.eot?v=4.6.3');
+    src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.6.3') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.6.3') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.6.3') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.6.3') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.6.3#fontawesomeregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .icon {
     display: inline-block;
     font: normal normal normal 14px FontAwesome;
@@ -34,6 +42,7 @@
 .icon-home:before {
     content: "\f015";
 }
+
 .icon-message:before {
     content: "\f0e0";
 }
@@ -44,4 +53,8 @@
 
 .icon-postdetail:before {
     content: "\f065";
+}
+
+.icon-repost:before {
+    content: "\f079";
 }
