--- a/static/scss/_settings.scss
+++ b/static/scss/_settings.scss
@@ -1,6 +1,7 @@
 .b-settings-container {
     .menu {
-        margin: 5px;
+        margin: $margin;
+        width: 100%;
 
         .active li {
             background-color: darken($col-background, 2.5%);
@@ -21,31 +22,31 @@
 
         ul {
             list-style: none;
-            margin: 0px;
-            padding: 0px;
+            margin: 0;
+            padding: 0;
             text-align: left;
-            border-radius: 5px;
-            border: 1px solid $col-border;
+            border-radius: $border-radius;
+            border: $border-size $border-style $col-border;
             background-color: $col-background;
 
             li {
-                padding: 10px;
-                border-top-right-radius: 5px;
-                border-top-left-radius: 5px;
-                border-bottom: 1px solid $col-border;
+                padding: 0.625rem;
+                border-top-right-radius: $border-radius;
+                border-top-left-radius: $border-radius;
+                border-bottom: $border-size $border-style $col-border;
                 background-color: $col-background;
             }
         }
     }
 
     .content {
-        margin: 5px;
+        margin: $margin;
         text-align: center;
 
         .form {
 
             label[for="id_new_password2"] {
-                transform: translate(0px, 10px);
+                transform: translate(0, 0.625rem);
             }
 
             span[class="helptext"] {
@@ -54,7 +55,7 @@
 
             .errorlist {
                 display: block;
-                color: darkred;
+                color: $col-text-error;
             }
 
             ul {
@@ -64,24 +65,25 @@
             }
 
             img {
-                border-radius: 5px;
-                border: 1px solid $col-border;
-                max-width: 40px;
-                max-height: 40px;
+                border-radius: $border-radius;
+                border: $border-size $border-style $col-border;
+                max-width: 2.5rem;
+                max-height: 2.5rem;
             }
 
             label {
-                width: 120px;
+                width: 7.5rem;
                 color: $col-text-pri;
-                margin-right: 10px;
+                margin-right: 0.625rem;
                 text-align: right;
-                margin-top: 10px;
+                margin-top: 0.625rem;
             }
 
             label[class="file"] {
-                border-radius: 5px;
-                padding: 5px;
-                width: 205px;
+                border-radius: $border-radius;
+                padding: 0.625rem;
+                width: 12.8125rem;
+                height: 2.5rem;
                 max-width: 70%;
                 text-align: left;
                 margin: 0;
@@ -94,14 +96,14 @@
 
             .notifications-pane label {
                 text-align: left !important;
-                width: 200px !important;
+                width: 12.5rem !important;
             }
 
             input {
-                border-radius: 5px;
-                border: 1px solid $col-border;
-                padding: 5px;
-                width: 250px;
+                border-radius: $border-radius;
+                border: $border-size $border-style $col-border;
+                padding: 0.4375rem 0.625rem 0.4375rem 0.625rem;
+                width: 15.625rem;
             }
 
             input[type="checkbox"] {
@@ -111,37 +113,37 @@
     }
 
     .header {
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-        border: 1px solid $col-border;
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: $border-radius;
+        border: $border-size $border-style $col-border;
         background-color: $col-background;
     }
 
     .body {
-        border: 1px solid $col-border;
+        border: $border-size $border-style $col-border;
         border-top: none;
         border-bottom: none;
         background-color: $col-background;
-        padding: 10px;
+        padding: 0.625rem
     }
 
     .footer {
-        border-bottom-left-radius: 5px;
-        border-bottom-right-radius: 5px;
-        border: 1px solid $col-border;
+        border-bottom-left-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
+        border: $border-size $border-style $col-border;
         background-color: $col-background;
-        min-height: 50px;
-        padding: 10px;
+        min-height: 3.125rem;
+        padding: 0.625rem;
     }
 
     h1 {
-        margin: 5px;
+        margin: 0.3125rem;
         color: $col-pri;
     }
 
     #success-text {
         color: $col-text-pri;
-        margin-bottom: 100px;
-        margin-top: 100px;
+        margin-bottom: 6.25rem;
+        margin-top: 6.25rem;
     }
 }
