--- a/static/scss/gabr.scss
+++ b/static/scss/gabr.scss
@@ -4,15 +4,18 @@ $col-background: #ffffff;
 $col-border: #e1e8ed;
 $col-text-pri: #373a3c;
 $col-text-sec: #8899a6;
+$col-text-error: #7c2527;
 
 $font-light: 100;
 $font-regular: 400;
 $font-bold: 600;
 
-$border-radius: 5px;
-$border-size: 1px;
+$border-radius: 0.3125rem;
+$border-avatar-radius: 0.625rem;
+$border-avatar-size: 0.3125rem;
+$border-size: 0.0625rem;
 $border-style: solid;
-$padding: 1rem;
+$padding: 0.625rem;
 $margin: 0.25rem;
 
 @keyframes fadein {
@@ -26,12 +29,13 @@ $margin: 0.25rem;
 }
 
 body {
-    padding-top: 55px;
+    padding-top: 3.5rem;
     background-color: $col-body-background;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
     color: $col-text-pri;
     font-size: 1rem;
+    margin-bottom: 10rem;
 }
 
 @import "_button";
