--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}"/>
 
     <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-    <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
+    <!--<link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">-->
     <link href="{% static "css/gabr.css" %}" rel="stylesheet">
 
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>-->
@@ -29,96 +29,98 @@
 
 <!-- Navigation -->
 <nav class="b-navbar">
-    <!-- Left nav -->
-    <div class="item left">
-        <a class="link" href="/">
-            <span class="icon icon-home"></span>
-            Home
-        </a>
-    </div>
-    {% if user.is_authenticated %}
+    <div class="item-container">
+        <!-- Left nav -->
         <div class="item left">
-            <a class="link" href="{% url "messages" %}">
-                <span class="icon icon-message"></span>
-                Messages
+            <a class="link" href="/">
+                <span class="icon icon-home"></span>
+                Home
             </a>
         </div>
-
-        <div class="item left">
-            <a class="link" href="{% url "notifications" %}">
-                <span class="icon icon-notification"></span>
-                <span id="nav-notifications" class="label label-pill label-danger"></span>
-                Notifications
-            </a>
-        </div>
-
-        <!-- Right nav -->
-        <div class="item right">
-            <button class="button" onclick="postTo()">
-                <span class="icon icon-post"></span>
-                New Post
-            </button>
-        </div>
-
-        <!-- User dropdown -->
-        <div class="item right">
-            <div class="dropdown">
-                <a href="#" data-toggle="dropdown">
-                    <div class="image-container">
-                        <img class="image" src="{{ current_user.avatar.url }}" />
-                    </div>
+        {% if user.is_authenticated %}
+            <div class="item left">
+                <a class="link" href="{% url "messages" %}">
+                    <span class="icon icon-message"></span>
+                    Messages
                 </a>
-                <div class="dropdown-menu dropdown-menu-right fade-in">
-                    <a class="dropdown-item" href="{% url "profile" user_name=user.username %}">
-                        <span class="fa icon-user"></span>
-                        View profile
+            </div>
+
+            <div class="item left">
+                <a class="link" href="{% url "notifications" %}">
+                    <span class="icon icon-notification"></span>
+                    <span id="nav-notifications" class="label label-pill label-danger"></span>
+                    Notifications
+                </a>
+            </div>
+
+            <!-- Right nav -->
+            <div class="item right">
+                <button class="button" onclick="postTo()">
+                    <span class="icon icon-post"></span>
+                    New Post
+                </button>
+            </div>
+
+            <!-- User dropdown -->
+            <div class="item right">
+                <div class="dropdown">
+                    <a href="#" data-toggle="dropdown">
+                        <div class="image-container">
+                            <img class="image" src="{{ current_user.avatar.url }}" />
+                        </div>
                     </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url "profile_lists" user_name=user.username %}">
-                        <span class="fa icon-list"></span>
-                        Lists
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url "help" %}">
-                        <span class="fa icon-help"></span>
-                        Help
-                    </a>
-                    <a class="dropdown-item" href="{% url "advertising" %}">
-                        <span class="fa icon-ad"></span>
-                        Advertising
-                    </a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="{% url "settings" %}">
-                        <span class="fa icon-settings"></span>
-                        Settings
-                    </a>
-                    <a class="dropdown-item" href="{% url "logout" %}">
-                        <span class="fa icon-logout"></span>
-                        Log out
-                    </a>
+                    <div class="dropdown-menu dropdown-menu-right fade-in">
+                        <a class="dropdown-item" href="{% url "profile" user_name=user.username %}">
+                            <span class="icon icon-user"></span>
+                            View profile
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url "profile_lists" user_name=user.username %}">
+                            <span class="icon icon-list"></span>
+                            Lists
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url "help" %}">
+                            <span class="icon icon-help"></span>
+                            Help
+                        </a>
+                        <a class="dropdown-item" href="{% url "advertising" %}">
+                            <span class="icon icon-ad"></span>
+                            Advertising
+                        </a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url "settings" %}">
+                            <span class="icon icon-settings"></span>
+                            Settings
+                        </a>
+                        <a class="dropdown-item" href="{% url "logout" %}">
+                            <span class="icon icon-logout"></span>
+                            Log out
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-    {% endif %}
-    {% if not user.is_authenticated %}
+        {% endif %}
+        {% if not user.is_authenticated %}
+            <div class="item right">
+                <form action="{% url "login" %}" style="display: inline">
+                    <button class="button" type="submit">
+                        <span class="icon icon-post"></span>
+                        Log in
+                    </button>
+                </form>
+                <form action="{% url "signup" %}" style="display: inline">
+                    <button class="button" type="submit">
+                        <span class="icon icon-post"></span>
+                        Sign up
+                    </button>
+                </form>
+            </div>
+        {% endif %}
+        <!-- Search box -->
         <div class="item right">
-            <form action="{% url "login" %}" style="display: inline">
-                <button class="button" type="submit">
-                    <span class="icon icon-post"></span>
-                    Log in
-                </button>
-            </form>
-            <form action="{% url "signup" %}" style="display: inline">
-                <button class="button" type="submit">
-                    <span class="icon icon-post"></span>
-                    Sign up
-                </button>
-            </form>
+            <input class="text-input" type="text" placeholder="Search">
         </div>
-    {% endif %}
-    <!-- Search box -->
-    <div class="item right">
-        <input class="text-input" type="text" placeholder="Search">
     </div>
 </nav>
 
@@ -176,13 +178,15 @@
                     hideProfileCard();
                 });
             </script>
-            <p id="modal-viewpost-post-body" class="post-text"></p>
-            <button onclick="onLikeButton(-1)" class="post-action-button" id="like-button" name="like-button" type="button">
-                <span id="modal-viewpost-like" class="icon like-button-false"></span>
-            </button>
-            <button onclick="onRepostButton(-1)" class="post-action-button" id="repost-button" name="repost-button" type="button">
-                <span id="modal-viewpost-repost" class="icon repost-button-false"></span>
-            </button>
+            <p id="modal-viewpost-post-body" class="body"></p>
+            <div class="post-action-button-container">
+                <button onclick="onLikeButton(-1)" class="post-action-button" id="like-button" name="like-button" type="button">
+                    <span id="modal-viewpost-like" class="icon like-button-false"></span>
+                </button>
+                <button onclick="onRepostButton(-1)" class="post-action-button" id="repost-button" name="repost-button" type="button">
+                    <span id="modal-viewpost-repost" class="icon repost-button-false"></span>
+                </button>
+            </div>
         </div>
     </div>
 </div>
