--- a/static/templates/profile-posts.html
+++ b/static/templates/profile-posts.html
@@ -20,7 +20,7 @@
         <div id="posts">
         </div>
         <div class="row">
-            <a class="feed-special-link" onclick="loadOlderPosts('profile', '{{ target_user.user.username }}')">
+            <a class="feed-action-button" onclick="loadOlderPosts('profile', '{{ target_user.user.username }}')">
                 <div id="load-more-posts" class="b-load-more-posts">
                     <div class="body">
                         <p>Load more</p>
